--- a/public/styles.css
+++ b/public/styles.css
@@ -635,7 +635,8 @@ h1 {
   font-weight: 700;
   --tw-text-opacity: 1;
   color: rgb(67 56 202 / var(--tw-text-opacity));
-  font-size: min(2.5vw, 2.5em);
+  font-size: min(7.5vw, 7.5em);
+  /* Increased 3x from 2.5em */
   margin-bottom: 2vw;
   padding-bottom: 1vw;
 }
@@ -647,7 +648,8 @@ h2 {
   font-weight: 600;
   --tw-text-opacity: 1;
   color: rgb(79 70 229 / var(--tw-text-opacity));
-  font-size: min(1.8vw, 1.8em);
+  font-size: min(5.4vw, 5.4em);
+  /* Increased 3x from 1.8em */
   margin-top: 2vw;
   margin-bottom: 1.5vw;
   padding-left: 1vw;
@@ -657,7 +659,8 @@ h3 {
   font-weight: 500;
   --tw-text-opacity: 1;
   color: rgb(99 102 241 / var(--tw-text-opacity));
-  font-size: min(1.4vw, 1.4em);
+  font-size: min(4.2vw, 4.2em);
+  /* Increased 3x from 1.4em */
   margin-top: 1.5vw;
   margin-bottom: 1vw;
 }
@@ -674,6 +677,16 @@ h3 {
   padding: 1.2vw;
 }
 
+/* Ensure radio/checkbox options within form-group have reduced spacing */
+
+.form-group input[type="radio"],
+.form-group input[type="checkbox"] {
+  margin-right: 0.4vw;
+  vertical-align: middle;
+  width: 1vw;
+  height: 1vw;
+}
+
 label {
   margin-right: 0.25rem;
   display: inline-block;
@@ -681,7 +694,8 @@ label {
   --tw-text-opacity: 1;
   color: rgb(55 48 163 / var(--tw-text-opacity));
   width: 20vw;
-  font-size: min(1vw, 1em);
+  font-size: min(3vw, 3em);
+  /* Increased 3x from 1em */
 }
 
 input[type="text"],
@@ -721,15 +735,8 @@ select,
 input[type="date"] {
   padding: 0.8vw;
   width: 15vw;
-  font-size: min(1vw, 1em);
-}
-
-input[type="radio"],
-input[type="checkbox"] {
-  margin-right: 0.4vw;
-  vertical-align: middle;
-  width: 1vw;
-  height: 1vw;
+  font-size: min(3vw, 3em);
+  /* Increased 3x from 1em */
 }
 
 table {
@@ -752,7 +759,8 @@ td {
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
   text-align: left;
   padding: 1.2vw;
-  font-size: min(1vw, 1em);
+  font-size: min(3vw, 3em);
+  /* Increased 3x from 1em */
 }
 
 th {
@@ -790,7 +798,8 @@ td {
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
   text-align: left;
   padding: 1.2vw;
-  font-size: min(1vw, 1em);
+  font-size: min(3vw, 3em);
+  /* Increased 3x */
 }
 
 #foodFrequencyTable th {
@@ -809,16 +818,14 @@ td {
 #foodFrequencyTable th:first-child,
 #foodFrequencyTable td:first-child {
   width: 33%;
-  /* Increased by 10% from 30% */
 }
 
 #foodFrequencyTable th:not(:first-child),
 #foodFrequencyTable td:not(:first-child) {
   width: 13%;
-  /* Decreased by 5% from 14% */
 }
 
-/* Top Two Items Table Styles (assumed table ID) */
+/* Top Two Items Table Styles (assumed ID, may need adjustment) */
 
 #topTwoItemsTable {
   margin-top: 15px;
@@ -839,7 +846,8 @@ td {
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
   text-align: left;
   padding: 1.2vw;
-  font-size: min(1vw, 1em);
+  font-size: min(3vw, 3em);
+  /* Increased 3x */
 }
 
 #topTwoItemsTable th {
@@ -859,18 +867,15 @@ td {
 #topTwoItemsTable th:first-child,
 #topTwoItemsTable td:first-child {
   width: 28%;
-  /* Decreased by 5% from 30% */
 }
 
 #topTwoItemsTable td:first-child {
   white-space: normal;
-  /* Allow wrapping for Items column */
 }
 
 #topTwoItemsTable th:not(:first-child),
 #topTwoItemsTable td:not(:first-child) {
   width: 14%;
-  /* Matches general table proportions */
 }
 
 /* Meal Recall Table Styles */
@@ -934,7 +939,8 @@ td {
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
   text-align: left;
   padding: 0.8vw;
-  font-size: min(0.9vw, 0.9em);
+  font-size: min(2.7vw, 2.7em);
+  /* Increased 3x from 0.9em */
 }
 
 #mealRecallTableDay1_Early th,
@@ -1109,7 +1115,8 @@ table input[type="date"] {
   box-sizing: border-box;
   display: inline-block;
   width: 100%;
-  font-size: min(1vw, 1em);
+  font-size: min(3vw, 3em);
+  /* Increased 3x */
 }
 
 button {
@@ -1148,7 +1155,8 @@ button:disabled {
 button {
   padding: 1vw 2vw;
   margin: 1vw 0.5vw;
-  font-size: min(1vw, 1em);
+  font-size: min(3vw, 3em);
+  /* Increased 3x */
 }
 
 .next-btn {
@@ -1213,7 +1221,8 @@ button {
 .remove-row-action-btn {
   padding: 0.6vw 1.2vw;
   margin: 0 0.4vw;
-  font-size: min(0.9vw, 0.9em);
+  font-size: min(2.7vw, 2.7em);
+  /* Increased 3x from 0.9em */
 }
 
 .add-row-btn {
@@ -1300,7 +1309,8 @@ button {
   color: rgb(255 255 255 / var(--tw-text-opacity));
   padding: 1vw 2vw;
   margin: 1vw 0;
-  font-size: min(1.2vw, 1.2em);
+  font-size: min(3.6vw, 3.6em);
+  /* Increased 3x from 1.2em */
   animation-delay: 2.5s;
 }
 
@@ -1315,7 +1325,8 @@ button {
   color: rgb(255 255 255 / var(--tw-text-opacity));
   padding: 1vw 2vw;
   margin: 1vw 0;
-  font-size: min(1.2vw, 1.2em);
+  font-size: min(3.6vw, 3.6em);
+  /* Increased 3x from 1.2em */
 }
 
 .meal-recall-container {
@@ -1337,7 +1348,8 @@ button {
 
 .meal-time label {
   margin-right: 0.25rem;
-  font-size: min(1vw, 1em);
+  font-size: min(3vw, 3em);
+  /* Increased 3x */
 }
 
 .meal-time table {
@@ -1396,7 +1408,8 @@ button {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
   margin-bottom: 2vw;
   padding: 1.5vw;
-  font-size: min(1vw, 1em);
+  font-size: min(3vw, 3em);
+  /* Increased 3x */
 }
 
 .warning-text {
@@ -1406,7 +1419,8 @@ button {
   font-weight: 700;
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
-  font-size: min(0.8vw, 0.8em);
+  font-size: min(0.27vw, 0.27em);
+  /* Decreased 3x, ~2.7px at 1000px viewport */
   margin-bottom: 1vw;
   padding: 1vw;
 }
@@ -1441,7 +1455,8 @@ button {
 
 .calc-btn {
   padding: 1vw 2vw;
-  font-size: min(1vw, 1em);
+  font-size: min(3vw, 3em);
+  /* Increased 3x */
 }
 
 .button-group {
@@ -1465,7 +1480,8 @@ button {
   color: rgb(31 41 55 / var(--tw-text-opacity));
   margin-top: 2vw;
   padding: 1.5vw;
-  font-size: min(1vw, 1em);
+  font-size: min(3vw, 3em);
+  /* Increased 3x */
 }
 
 .unique-link {
@@ -1479,7 +1495,8 @@ button {
 }
 
 .unique-link {
-  font-size: min(1vw, 1em);
+  font-size: min(3vw, 3em);
+  /* Increased 3x */
 }
 
 img {
